changing main db to sqlserver

--- a/src/Autopick.Api/appsettings.json
+++ b/src/Autopick.Api/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": ""
+    "DefaultConnection": "Server=localhost,1433;Database=AutoPick;User ID=sa;Password=1q2w3e4r@#$"
   },
   "AllowedHosts": "*"
 }
